fixed spacing

--- a/style.css
+++ b/style.css
@@ -28,7 +28,6 @@ body {
   font-size: 36pt;
   color: #000000;
   margin-top: 0;
-  margin-bottom: 20%;
 }
 
 .link {
@@ -36,7 +35,6 @@ body {
   font-weight: normal;
   font-size: 36pt;
   color: #000000;
-  padding-top: 20%;
 }
 
 .pretext {
